fix(styles): do not overflow x

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,8 @@ a:visited {
   }
 }
 
-body {
+body, html {
+  max-width: 100%;
   overflow-x: hidden;
 }
 
